--- a/package.json
+++ b/package.json
@@ -57,9 +57,15 @@
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-prettier": "^1.1.1",
     "stylelint-processor-styled-components": "^1.8.0",
-    "webpack": "^4.33.0"
+    "webpack": "^4.33.0",
+    "npm-watch": "0.7.0"
+  },
+  "watch": {
+    "change": "packages/*/{src,test}/*.js"
   },
   "scripts": {
+    "watch": "npm-watch",
+    "change": "yarn && dev-copy.bat",
     "bootstrap": "lerna bootstrap --use-workspaces",
     "prepublish": "lerna exec --parallel -- babel --root-mode upward src -d lib --ignore **/*.story.js,**/*.spec.js",
     "check-eslint-config": "eslint --print-config jestconfig.js | eslint-config-prettier-check",
