--- a/packages/vehicle-rental-overlay/package.json
+++ b/packages/vehicle-rental-overlay/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "@opentripplanner/core-utils": "^2.1.0",
     "@opentripplanner/from-to-location-picker": "^1.0.0",
-    "@opentripplanner/zoom-based-markers": "^1.0.0",
+    "@opentripplanner/zoom-based-markers": "file:../zoom-based-markers",
     "lodash.memoize": "^4.1.2",
     "prop-types": "^15.7.2",
     "styled-icons": "^9.1.0"
